fix: to align center on realms page

--- a/src/pages/styles.module.scss
+++ b/src/pages/styles.module.scss
@@ -59,6 +59,7 @@
     column-gap: 5rem;
     row-gap: 10rem;
     padding: 7rem 2rem;
+    justify-items: center;
 
     @include lg-width {
       grid-template-columns: repeat(2, 1fr);
